--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = amazon-efs-utils
-url = https://github.com/aws/efs-utils/archive/v1.6.tar.gz
+url = https://github.com/aws/efs-utils/archive/v1.7/efs-utils-1.7.tar.gz
 archives = 
 giturl = https://github.com/aws/efs-utils.git
 
