--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = amazon-efs-utils
-url = https://github.com/aws/efs-utils/archive/v1.7/efs-utils-1.7.tar.gz
+url = https://github.com/aws/efs-utils/archive/v1.13/efs-utils-1.13.tar.gz
 archives = 
 giturl = https://github.com/aws/efs-utils.git
 domain = 
@@ -13,7 +13,7 @@ allow_test_failures = false
 # unset %build ld_as_needed variable
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
-autoupdate = false
+autoupdate = true
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
@@ -55,7 +55,7 @@ use_avx512 = false
 # add clang flags
 use_clang = false
 # configure build for lto
-use_lto = false
+use_lto = true
 # require package verification for build
 verify_required = false
 
