[update to 1.24] Fixes the mount issue with full DNS name in the AWS China Regions; Upgrades unit test coverage version dependency to enable accurate python3.8 coverage test
Yuan Gao (7):
      Fixes the mount issue with full DNS name in the AWS China Regions; Upgrades unit test coverage version dependency to enable accurate python3.8 coverage test
      Improvements to metadata retrieval and IAM authentication
      Add support for Amazon Elastic Container Service
      Update rpm changelog for v1.23-2, fix circleCI build issue
      Enable region sourcing from efs-utils configuration file and fix stunnel exec path issue in openSUSE
      List which as dependency to search command exec path
      Remove which from DEB package dependency

stvhu (1):
      Improvements to auth and access point support

--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = amazon-efs-utils
-url = https://github.com/aws/efs-utils/archive/v1.19/efs-utils-1.19.tar.gz
+url = https://github.com/aws/efs-utils/archive/v1.24/efs-utils-1.24.tar.gz
 archives = 
 giturl = https://github.com/aws/efs-utils.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
