amazon-efs-utils: Autospec creation for update from version 1.24 to version 1.25.1

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = amazon-efs-utils
-url = https://github.com/aws/efs-utils/archive/v1.24/efs-utils-1.24.tar.gz
+url = https://github.com/aws/efs-utils/archive/v1.25-1/efs-utils-1.25.1.tar.gz
 archives = 
 giturl = https://github.com/aws/efs-utils.git
 domain = 
@@ -39,6 +39,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
