amazon-efs-utils: Autospec creation for update from version 1.31.2 to version 1.31.3
commit f889d068389b569fb19713e1d647387b40702bd9
Author: Jigar Dedhia <dedhiajd@amazon.com>
Date:   Thu Dec 9 03:37:39 2021 +0000

    Add unmount_time and unmount_count to handle inconsistent mount reads

    * Allow specifying fs_id in cloudwatch log group name

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = amazon-efs-utils
-url = https://github.com/aws/efs-utils/archive/v1.31.2/efs-utils-1.31.2.tar.gz
+url = https://github.com/aws/efs-utils/archive/v1.31.3/efs-utils-1.31.3.tar.gz
 archives = 
 giturl = https://github.com/aws/efs-utils.git
 domain = 
@@ -47,6 +47,8 @@ optimize_size = false
 pgo = false
 # set flags for security-sensitive builds
 security_sensitive = false
+# package is only used by servers
+server = false
 # do not run test suite
 skip_tests = false
 # add .so files to the lib package instead of dev
