amazon-efs-utils: Autospec creation for update from version 1.34.4 to version 1.34.5
Andreas Resios (1):
      Handle invalid entries in /proc/mounts

Ryan Stankiewicz (1):
      efs-utils v1.34.5 release

slang (1):
      detect invalid private key

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = amazon-efs-utils
-url = https://github.com/aws/efs-utils/archive/v1.34.4/efs-utils-1.34.4.tar.gz
+url = https://github.com/aws/efs-utils/archive/v1.34.5/efs-utils-1.34.5.tar.gz
 archives = 
 giturl = https://github.com/aws/efs-utils.git
 domain = 
@@ -27,6 +27,8 @@ conservative_flags = false
 dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
+# compile full (traditional) debug info
+full-debug-info = false
 # optimize build for speed over size
 funroll-loops = false
 # set flags to smallest -02 flags possible
