amazon-efs-utils: Autospec creation for update from version 1.35.1 to version 1.35.2
Arnav Gupta (1):
      Revert version checker and support MacOS Sonoma

adam kaminski (3):
      Add support for macOS Sonoma based EC2 Mac instances
      Add support for macOS Sonoma based EC2 instances
      Add support for macOS Sonoma based EC2 Mac instances

mskanth972 (1):
      Updated the README to indicate support for the RHEL9 Linux distribution in efs-utils.

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = amazon-efs-utils
-url = https://github.com/aws/efs-utils/archive/v1.35.1/efs-utils-1.35.1.tar.gz
+url = https://github.com/aws/efs-utils/archive/v1.35.2/efs-utils-1.35.2.tar.gz
 archives = 
 giturl = https://github.com/aws/efs-utils.git
 domain = 
@@ -62,7 +62,7 @@ skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = false
 # configure build for apx
-use_apx = true
+use_apx = false
 # configure build for avx2
 use_avx2 = true
 # configure build for avx512
