--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = amazon-efs-utils
-url = https://github.com/aws/efs-utils/archive/v2.0.2/efs-utils-2.0.2.tar.gz
+url = https://github.com/aws/efs-utils/archive/v2.0.3/efs-utils-2.0.3.tar.gz
 archives = 
 giturl = https://github.com/aws/efs-utils.git
 domain = 
@@ -71,6 +71,8 @@ use_avx512 = false
 use_clang = false
 # configure build for lto
 use_lto = true
+# use ninja build files
+use_ninja = false
 # require package verification for build
 verify_required = false
 
