--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = amazon-efs-utils
-url = https://github.com/aws/efs-utils/archive/v2.3.0/efs-utils-2.3.0.tar.gz
+url = https://github.com/aws/efs-utils/archive/v2.3.1/efs-utils-2.3.1.tar.gz
 archives = 
 giturl = https://github.com/aws/efs-utils.git
 domain = 
@@ -37,6 +37,8 @@ fast-math = false
 full-debug-info = false
 # optimize build for speed over size
 funroll-loops = false
+# require license subpackage for successful build
+has_license = true
 # set flags to smallest -02 flags possible
 insecure_build = false
 # do not remove static libraries
